mod(mapper,service): 가게 상세관련에 맞도록 수정